# python-template

./: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
