[tool.poetry]
name = "Python Template"
version = "0.1.0"
description = "Template for project"
authors = ["reinhud"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
pytest = "^7.4.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
